[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/Level 1.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/ambientação_azulada.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Level 11.gd" type="Script" id=5]
[ext_resource path="res://scenes/area_troll_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Spike.tscn" type="PackedScene" id=7]

[node name="Level 11" type="Node2D"]
script = ExtResource( 5 )

[node name="tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65536, -1073741824, 0, -65535, -1073741824, 0, -65534, -1073741824, 0, -65533, -1073741824, 0, -65532, -1073741824, 0, -65531, -1073741824, 0, -65530, -1073741824, 0, -65529, -1073741824, 0, -65528, -1073741824, 0, -65527, -1073741824, 0, -65526, -1073741824, 0, -65525, -1073741824, 0, -65524, -1073741824, 0, -65523, -1073741824, 0, -65522, -1073741824, 0, -65521, -1073741824, 0, -65520, -1073741824, 0, -65519, -1073741824, 0, -65518, -1073741824, 0, -65517, -1073741824, 0, -65516, -1073741824, 0, -65515, -1073741824, 0, -65514, -1073741824, 0, -65513, -1073741824, 0, -65512, -1073741824, 0, -65511, -1073741824, 0, -65510, -1073741824, 0, -65509, -1073741824, 0, -65508, -1073741824, 0, -65507, -1073741824, 0, -65506, -1073741824, 0, -65505, -1073741824, 0, -65504, -1073741824, 0, -65503, -1073741824, 0, -65502, -1073741824, 0, -65501, -1073741824, 0, -65500, -1073741824, 0, -65499, -1073741824, 0, -65498, -1073741824, 0, -65497, -1073741824, 0, -65496, -1073741824, 0, -65495, -1073741824, 0, -65494, -1073741824, 0, -65493, -1073741824, 0, 65535, -1073741824, 0, 43, -1073741824, 0, 131071, -1073741824, 0, 65579, -1073741824, 0, 196607, -1073741824, 0, 131115, -1073741824, 0, 262143, -1073741824, 0, 196651, -1073741824, 0, 327679, -1073741824, 0, 262187, -1073741824, 0, 393215, -1073741824, 0, 327723, -1073741824, 0, 458751, -1073741824, 0, 393259, -1073741824, 0, 524287, -1073741824, 0, 458795, -1073741824, 0, 524288, -1073741824, 0, 524289, -1073741824, 0, 524290, -1073741824, 0, 524291, -1073741824, 0, 524292, -1073741824, 0, 524293, -1073741824, 0, 524294, -1073741824, 0, 524295, -1073741824, 0, 524296, -1073741824, 0, 524297, -1073741824, 0, 524298, -1073741824, 0, 524299, -1073741824, 0, 524300, -1073741824, 0, 524301, -1073741824, 0, 524302, -1073741824, 0, 524331, -1073741824, 0, 589824, -1073741824, 0, 589838, -1073741824, 0, 589839, -1073741824, 0, 589840, -1073741824, 0, 589841, -1073741824, 0, 589842, -1073741824, 0, 589843, -1073741824, 0, 589844, -1073741824, 0, 589845, -1073741824, 0, 589846, -1073741824, 0, 589847, -1073741824, 0, 589848, -1073741824, 0, 589849, -1073741824, 0, 589850, -1073741824, 0, 589851, -1073741824, 0, 589852, -1073741824, 0, 589853, -1073741824, 0, 589854, -1073741824, 0, 589855, -1073741824, 0, 589856, -1073741824, 0, 589857, -1073741824, 0, 589858, -1073741824, 0, 589859, -1073741824, 0, 589860, -1073741824, 0, 589861, -1073741824, 0, 589862, -1073741824, 0, 589863, -1073741824, 0, 589866, -1073741824, 0, 589867, -1073741824, 0, 655360, -1073741824, 0, 655403, -1073741824, 0, 720896, -1073741824, 0, 720939, -1073741824, 0, 786432, -1073741824, 0, 786475, -1073741824, 0, 851968, -1073741824, 0, 852011, -1073741824, 0, 917504, -1073741824, 0, 917547, -1073741824, 0, 983040, -1073741824, 0, 983073, -1073741824, 0, 983074, -1073741824, 0, 983075, -1073741824, 0, 983076, -1073741824, 0, 983077, -1073741824, 0, 983078, -1073741824, 0, 983079, -1073741824, 0, 983080, -1073741824, 0, 983081, -1073741824, 0, 983082, -1073741824, 0, 983083, -1073741824, 0, 1048576, -1073741824, 0, 1048579, -1073741824, 0, 1048580, -1073741824, 0, 1048581, -1073741824, 0, 1048582, -1073741824, 0, 1048583, -1073741824, 0, 1048584, -1073741824, 0, 1048585, -1073741824, 0, 1048586, -1073741824, 0, 1048587, -1073741824, 0, 1048588, -1073741824, 0, 1048589, -1073741824, 0, 1048590, -1073741824, 0, 1048591, -1073741824, 0, 1048592, -1073741824, 0, 1048593, -1073741824, 0, 1048594, -1073741824, 0, 1048595, -1073741824, 0, 1048596, -1073741824, 0, 1048597, -1073741824, 0, 1048598, -1073741824, 0, 1048599, -1073741824, 0, 1048600, -1073741824, 0, 1048601, -1073741824, 0, 1048602, -1073741824, 0, 1048603, -1073741824, 0, 1048604, -1073741824, 0, 1048605, -1073741824, 0, 1048606, -1073741824, 0, 1048607, -1073741824, 0, 1048608, -1073741824, 0, 1048609, -1073741824, 0, 1048619, -1073741824, 0, 1114112, -1073741824, 0, 1114155, -1073741824, 0, 1179648, -1073741824, 0, 1179691, -1073741824, 0, 1245184, -1073741824, 0, 1245227, -1073741824, 0, 1310720, -1073741824, 0, 1310763, -1073741824, 0, 1376256, -1073741824, 0, 1376276, -1073741824, 0, 1376277, -1073741824, 0, 1376278, -1073741824, 0, 1376279, -1073741824, 0, 1376280, -1073741824, 0, 1376281, -1073741824, 0, 1376282, -1073741824, 0, 1376283, -1073741824, 0, 1376284, -1073741824, 0, 1376285, -1073741824, 0, 1376286, -1073741824, 0, 1376287, -1073741824, 0, 1376288, -1073741824, 0, 1376289, -1073741824, 0, 1376290, -1073741824, 0, 1376291, -1073741824, 0, 1376292, -1073741824, 0, 1376293, -1073741824, 0, 1376294, -1073741824, 0, 1376295, -1073741824, 0, 1376296, -1073741824, 0, 1376297, -1073741824, 0, 1376298, -1073741824, 0, 1376299, -1073741824, 0, 1441792, -1073741824, 0, 1441793, -1073741824, 0, 1441794, -1073741824, 0, 1441795, -1073741824, 0, 1441796, -1073741824, 0, 1441797, -1073741824, 0, 1441798, -1073741824, 0, 1441799, -1073741824, 0, 1441800, -1073741824, 0, 1441801, -1073741824, 0, 1441802, -1073741824, 0, 1441803, -1073741824, 0, 1441804, -1073741824, 0, 1441805, -1073741824, 0, 1441806, -1073741824, 0, 1441807, -1073741824, 0, 1441808, -1073741824, 0, 1441809, -1073741824, 0, 1441810, -1073741824, 0, 1441811, -1073741824, 0, 1441812, -1073741824, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 154, 92 )

[node name="ambientação_azulada" parent="." instance=ExtResource( 2 )]

[node name="portal" parent="." instance=ExtResource( 4 )]
position = Vector2( 632, 321 )

[node name="portals_position" type="Node2D" parent="."]

[node name="portal2_position" type="Position2D" parent="portals_position"]
position = Vector2( 45, 45 )

[node name="area_troll_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 595, 302 )

[node name="area_troll_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 84, 75 )

[node name="Spike" parent="." instance=ExtResource( 7 )]
position = Vector2( 385, 244 )

[connection signal="body_entered" from="area_troll_1" to="." method="_on_area_troll_1_body_entered"]
[connection signal="body_entered" from="area_troll_2" to="." method="_on_area_troll_2_body_entered"]

[editable path="area_troll_1"]
[editable path="area_troll_2"]
